AS-4141 and AS-4147

--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-details.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-details.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Correspondence about the statement - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
+  Upload correspondence about the adequacy of the statement - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us about the development's environmental impact
         </span>
         <h1 class="govuk-heading-xl">
-          Correspondence about the statement
+          Upload correspondence about the adequacy of the statement
         </h1>
 
         <p class="govuk-body">
