--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-sitenotice.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement-sitenotice.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Site notice and advertisement for the environmental impact assessment development - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
+  Upload the site notice and advertisement for the environmental impact assessment - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us about the development's environmental impact
         </span>
         <h1 class="govuk-heading-xl">
-          Site notice and advertisement for the environmental impact assessment development
+          Upload the site notice and advertisement for the environmental impact assessment
         </h1>
 
         <p class="govuk-body">
