--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion-details.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/screening-opinion-details.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Screening opinion details - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
+  Upload the screening opinion and any other correspondence - Tell us about the development's environmental impact - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,12 +29,8 @@
           Tell us about the development's environmental impact
         </span>
         <h1 class="govuk-heading-xl">
-          Screening opinion details
-        </h1>
-
-        <h2 class="govuk-heading-m">
           Upload the screening opinion and any other correspondence
-        </h2>
+        </h1>
       
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-environmentalimpact-screeningopinion-details">
