--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/other.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/other.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Other relevant policies - Upload your local plans and policies - {{serviceName}} - GOV.UK
+  Upload any other relevant policies - Upload your local plans and policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Upload your local plans and policies
         </span>
         <h1 class="govuk-heading-xl">
-          Other relevant policies
+          Upload any other relevant policies
         </h1>
       
         <div class="govuk-form-group">
