--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/statutory-development.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/statutory-development.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Statutory development plan policy - Upload your local plans and policies - {{serviceName}} - GOV.UK
+  Upload extracts from the relevant statutory development plan policies - Upload your local plans and policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Upload your local plans and policies
         </span>
         <h1 class="govuk-heading-xl">
-          Statutory development plan policy
+          Upload extracts from the relevant statutory development plan policies
         </h1>
       
         <div class="govuk-form-group">
