--- a/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/local-plans-policies/supplementary-upload.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Supplementary planning documents - Upload your local plans and policies - {{serviceName}} - GOV.UK
+  Upload the relevant supplementary planning documents - Upload your local plans and policies - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,12 +30,8 @@
           Upload your local plans and policies
         </span>
         <h1 class="govuk-heading-xl">
-          Supplementary planning documents
+          Upload the relevant supplementary planning documents
         </h1>
-
-        <p class="govuk-body">
-          You can add one supplementary planning document at a time. You will be able to add more later.
-        </p>
         
         <div class="govuk-form-group">
           <label class="govuk-label" for="lpaq-{{version}}-localplanspolicies-supplementary">
