--- a/app/views/lpa-questionnaire/fullv2/proposed-development/rightofway-details.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/rightofway-details.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Would a public right of way need to be removed or diverted? - Tell us about the proposed development - {{serviceName}} - GOV.UK
+  Upload the definitive map and statement extract - Tell us about the proposed development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us about the proposed development
         </span>
         <h1 class="govuk-heading-xl">
-          Public right of way details
+          Upload the definitive map and statement extract
         </h1>
       
         <div class="govuk-form-group">
