--- a/app/views/lpa-questionnaire/fullv2/proposed-development/tpo-details.html
+++ b/app/views/lpa-questionnaire/fullv2/proposed-development/tpo-details.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Tree preservation order details - Tell us about the proposed development - {{serviceName}} - GOV.UK
+  Upload a plan showing the extent of the order - Tell us about the proposed development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us about the proposed development
         </span>
         <h1 class="govuk-heading-xl">
-          Tree preservation order details
+          Upload a plan showing the extent of the order
         </h1>
       
         <div class="govuk-form-group">
