--- a/app/views/lpa-questionnaire/fullv2/your-decision/planning-officers-report.html
+++ b/app/views/lpa-questionnaire/fullv2/your-decision/planning-officers-report.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Planning Officer's report - Provide details about your decision - {{serviceName}} - GOV.UK
+  Upload the Planning Officer's report - Provide details about your decision - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,11 +30,11 @@
           Provide details about your decision
         </span>
         <h1 class="govuk-heading-xl">
-          Planning Officer's report
+          Upload the Planning Officer's report
         </h1>
 
         <p class="govuk-body">
-          Upload the Planning Officer’s report to committee or delegated report on the application, and any other relevant documents or minutes.
+          Upload the Planning Officer's report to committee or delegated report on the application, and any other relevant documents or minutes.
         </p>
       
         <div class="govuk-form-group">
