--- a/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area-upload.html
+++ b/app/views/lpa-questionnaire/fullv2/surrounding-area/conservation-area-upload.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Upload the conservation area map and guidance - Tell us about the surrounding area - {{serviceName}} - GOV.UK
+  Upload the conservation area's documentation - Tell us about the surrounding area - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Tell us about the surrounding area
         </span>
         <h1 class="govuk-heading-xl">
-          Upload your documentation for the conservation area
+          Upload the conservation area's documentation
         </h1>
       
         <div class="govuk-form-group">
