AS-4140 AS-4064 AS-4172
Environmental impact questions reworked.
Task list updated.
Routing for v2 reworked for new flow.
Set up of complex skip link to CYA.

--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/affects-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/affects-listed-building-details.html
@@ -62,13 +62,13 @@
         }) }}
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload">
+          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload">
             Upload the listing description
           </label>
           <div id="contact-hint" class="govuk-hint">
             Drag and drop or choose a file
           </div>
-          <input class="govuk-file-upload pins-file-upload" id="lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload" name="lpaq-"+version+"-constraintsdesignations-affectslistedbuilding-upload" type="file">
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload" name="lpaq-{{version}}-constraintsdesignations-affectslistedbuilding-upload" type="file">
         </div>
 
         {{ govukDetails({
