--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/applicant-environmental-statement.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/applicant-environmental-statement.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Would the development affect a protected species? - Tell us about constraints, designations and other issues - {{serviceName}} - GOV.UK
+  Did the applicant submit an environmental statement? - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -26,15 +26,15 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Tell us about constraints, designations and other issues
+          Tell us if it's an environmental impact assessment development
         </span>
 
         {{ govukRadios({
-          idPrefix: "lpaq-"+version+"-constraintsdesignations-protectedspecies",
-          name: "lpaq-"+version+"-constraintsdesignations-protectedspecies",
+          idPrefix: "lpaq-"+version+"-environmentalimpact-applicantenvironmentalstatement",
+          name: "lpaq-"+version+"-environmentalimpact-applicantenvironmentalstatement",
           fieldset: {
             legend: {
-              text: "Would the development affect a protected species?",
+              text: "Did the applicant submit an environmental statement?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--xl"
             }
@@ -43,12 +43,12 @@
             {
               value: "Yes",
               text: "Yes",
-              checked: checked("lpaq-"+version+"-constraintsdesignations-protectedspecies", "Yes")
+              checked: checked("lpaq-"+version+"-environmentalimpact-applicantenvironmentalstatement", "Yes")
             },
             {
               value: "No",
               text: "No",
-              checked: checked("lpaq-"+version+"-constraintsdesignations-protectedspecies", "No")
+              checked: checked("lpaq-"+version+"-environmentalimpact-applicantenvironmentalstatement", "No")
             }
           ]
         }) }}
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="../task-list">Skip this question</a>
+          <a class="govuk-link" href="notifications-consultations">Skip this question</a>
         </div>
 
       </form>
