--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/environmental-statement.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Did the appellant provide an environmental statement? - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
+  Upload your environmental statement and supporting information - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,44 +28,49 @@
         <span class="govuk-caption-l">
           Tell us if it's an environmental impact assessment development
         </span>
+        <h1 class="govuk-heading-xl">
+          Upload your environmental statement and supporting information
+        </h1>
+      
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="lpaq-{{version}}-environmentalimpact-environmentalstatement">
+            Drag and drop or choose files
+          </label>
+          <input class="govuk-file-upload pins-file-upload" id="lpaq-{{version}}-environmentalimpact-environmentalstatement" name="lpaq-{{version}}-environmentalimpact-environmentalstatement" type="file" multiple>
+        </div>
 
-        {{ govukRadios({
-          idPrefix: "lpaq-"+version+"-environmentalimpact-environmentalstatement",
-          name: "lpaq-"+version+"-environmentalimpact-environmentalstatement",
-          fieldset: {
-            legend: {
-              text: "Did the appellant provide an environmental statement?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--xl"
-            }
-          },
-          items: [
-            {
-              value: "Yes",
-              text: "Yes",
-              checked: checked("lpaq-"+version+"-environmentalimpact-environmentalstatement", "Yes")
-            },
-            {
-              value: "No",
-              text: "No",
-              checked: checked("lpaq-"+version+"-environmentalimpact-environmentalstatement", "No")
-            }
-          ]
+        {{ govukDetails({
+          summaryText: "Files you can upload",
+          html: '
+            <p class="govuk-body">
+              You can upload the following types of file:
+            </p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>DOC or DOCX</li>
+              <li>JPG or JPEG</li>
+              <li>PDF</li>
+              <li>PNG</li>
+              <li>TIF or TIFF</li>
+            </ul>
+            <p class="govuk-body">
+              Your file must be smaller than 15MB.
+            </p>
+          '
         }) }}
-
-         <div class="govuk-button-group">
+        
+        <div class="govuk-button-group">
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="notifications-consultations">Skip this question</a>
+          <a class="govuk-link" href="environmental-statement">Skip this question</a>
         </div>
 
       </form>
 
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+    </div>
   </div>
-  <div class="govuk-grid-column-one-third">
-    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
-  </div>
-</div>
 
 {% endblock %}
