--- a/app/views/lpa-questionnaire/fullv2/environmental-impact/sensitive-area.html
+++ b/app/views/lpa-questionnaire/fullv2/environmental-impact/sensitive-area.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv2.html" %}
 
 {% block pageTitle %}
-  Is the development in or partly in a sensitive area? - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
+  Is the development in, partly in, or likely to affect a sensitive area? - Tell us if it's an environmental impact assessment development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,12 +29,23 @@
           Tell us if it's an environmental impact assessment development
         </span>
 
+        {% set detailsHtml %}
+          {{ govukTextarea({
+            id: "lpaq-"+version+"-environmentalimpact-sensitivearea-details",
+            name: "lpaq-"+version+"-environmentalimpact-sensitivearea-details",
+            label: {
+              text: "Tell us about the sensitive area"
+            },
+            value: data["lpaq-"+version+"-environmentalimpact-sensitivearea-details"]
+          }) }}
+        {% endset -%}
+
         {{ govukRadios({
-          idPrefix: "lpaq-"+version+"-environmentalimpact-scheduletwo-sensitive",
-          name: "lpaq-"+version+"-environmentalimpact-scheduletwo-sensitive",
+          idPrefix: "lpaq-"+version+"-environmentalimpact-sensitivearea",
+          name: "lpaq-"+version+"-environmentalimpact-sensitivearea",
           fieldset: {
             legend: {
-              text: "Is the development in or partly in a sensitive area?",
+              text: "Is the development in, partly in, or likely to affect a sensitive area?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--xl"
             }
@@ -43,12 +54,15 @@
             {
               value: "Yes",
               text: "Yes",
-              checked: checked("lpaq-"+version+"-environmentalimpact-scheduletwo-sensitive", "Yes")
+              checked: checked("lpaq-"+version+"-environmentalimpact-sensitivearea", "Yes"),
+              conditional: {
+                html: detailsHtml
+              }
             },
             {
               value: "No",
               text: "No",
-              checked: checked("lpaq-"+version+"-environmentalimpact-scheduletwo-sensitive", "No")
+              checked: checked("lpaq-"+version+"-environmentalimpact-sensitivearea", "No")
             }
           ]
         }) }}
