AS-4157 Emerging plan documents

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -416,13 +416,14 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (12)
+                        Jira Tickets (17)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4032" target="_blank">AS-4032 Create consistent patterns for single and multiple files uploads</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4036" target="_blank">AS-4036 Interaction change for type of designated site</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4064" target="_blank">AS-4064 Amends to LPA Questionnaire task list</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4071" target="_blank">AS-4071 Multiple file uploads as default</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4072" target="_blank">AS-4072 Conservation area question content</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4073" target="_blank">AS-4073 Reduce multiple possible uploads to single for a consultation</a></li>
@@ -433,7 +434,10 @@
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4097" target="_blank">AS-4097 LPA Questionnaire save and return functionality</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4101" target="_blank">AS-4101 Refer to designations consistently - acronym or full spelling</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-4129" target="_blank">AS-4129 Supplementary planning documents lead in question</a></li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4141" target="_blank">Design consistent h1s for upload screens</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4140" target="_blank">AS-4140 Consolidate EIA questions/flow</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4141" target="_blank">AS-4141 Design consistent h1s for upload screens</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4157" target="_blank">AS-4157 Emerging plan documents</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-4172" target="_blank">AS-4172 Reset routing for v2 based on flow in Miro</a></li>
                       </ul>
                     </div>
                   </details>
