--- a/app/views/lpa-questionnaire/fullv2/constraints-designations/aonb.html
+++ b/app/views/lpa-questionnaire/fullv2/constraints-designations/aonb.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Save and continue"
           }) }}
-          <a class="govuk-link" href="sssi">Skip this question</a>
+          <a class="govuk-link" href="designated-site">Skip this question</a>
         </div>
 
       </form>
